frontend/test/should_fail/index_pattern_multiple_edge_too_many_dependencies.grg
#using "index_multiple_model.gm"

rule i {
	-e1:E1->;
	-e2:E2->;
	-e:E{multiple(Ei >= e1.j, Ei <= e2.j)}->;
	
	modify {
	}
}
